--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
-<head>
-  <title>测试</title>
-</head>
-  
 <p>宣传测试</p>
 
 <ul>
   <li> <a href="http://shenqiwunet.com/wy/202401/1957.html">第一期</a> </li>
+  <li> <a href="http://shenqiwunet.com/wy/202401/1957.html">第二期</a> </li>
 </ul>
